# EerReaderLib

./: .gitignore  Bitmap.cpp  Bitmap.h  CMakeLists.txt  COPYING  DefectMaskingEER.cpp  DefectMaskingEER.h  EER File Format.docx  EerFile.cpp  EerFile.h  EerFrame.cpp  EerFrame.h  EerReaderLib.vcxproj  EerReaderLib.vcxproj.filters  ElectronCountedFramesDecompressor.cpp  ElectronCountedFramesDecompressor.h  FeiBitStreamer.h  GainDefectCorrect.cpp  LICENSE  README.MD  README.md  makeEerGain_raw2mrc.py  stdafx.cpp  stdafx.h  targetver.h
Test/: CMakeLists.txt  TestEerReader.cpp
